--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,11 +1,10 @@
-﻿<div class="container">
+﻿<div class="container bg-light">
 <h1> About Me</h1>
 
 <p class="par">
    I have a creative and analytical background.  I have been involved and directed many video productions for profit and volunteer.  In 2001, I received my Bachelor's Degree in Radio/TV Production from the University of Central Florida.  In 2007, I started A Majestic Moments Digital Studios, a special events and wedding videography company where I maintained our company website through Wix including learning about search engine optimization and how that can benefit a company by driving traffic to your website.  In 2009, I received computer tech training from New Horizons Computer Learning Center.  I am Comptia A+ and Network+ Certified.  I have also worked medical billing, data and claims analysis.
-  In 2017, I ventured to turn my attention to Coder Camp, a web development bootcamp, that later changed to Woz-U.  I was trained in Full Stack Web Development, including Angular, Asp.NET and C#.
+  In 2017, I ventured to turn my attention to Coder Camp, a web development bootcamp, that later changed to Woz-U Web Development Bootcamp.  I was trained in Full Stack Web Development
 
-    I am now ready to put that to work for you.  
 </p>
 
 <h2>These are my skills:</h2>
@@ -13,4 +12,5 @@
 <ul><li><img src="~/lib/bullet.png" />C#</li><li><img src="~/lib/bullet.png" />ASP.NET Core</li><li><img src="~/lib/bullet.png" />Entity Framework Core</li><li><img src="~/lib/bullet.png" />SQLite</li><li><img src="~/lib/bullet.png" />MySQL</li><li><img src="~/lib/bullet.png" />NoSQL (Mongo)</li><li><img src="~/lib/bullet.png" />AJAX</li><li><img src="~/lib/bullet.png" />AWS</li><li><img src="~/lib/bullet.png" />NGINX</li><li><img src="~/lib/bullet.png" />Angular8</li><li><img src="~/lib/bullet.png" />Typescript</li><li><img src="~/lib/bullet.png" />Bootstrap</li><li><img src="~/lib/bullet.png" />Cordova</li><li><img src="~/lib/bullet.png" />Ionic</li><li><img src="~/lib/bullet.png" />Qjuery</li><li><img src="~/lib/bullet.png" />HTML|CSS|JS</li></ul>
 <h4>Other Skills:</h4>
 <ul><li><img src="~/lib/bullet.png" />Data Analytical</li><li><img src="~/lib/bullet.png" />Video|Audio Productions</li><li><img src="~/lib/bullet.png" />Photography</li><li><img src="~/lib/bullet.png" />Graphics</li></ul>
+</div>
 </div>
