--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+<body id="body1">
    
-        <header id="home2">
+        <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dar border-bottom box-shadow">
                 <div class="container">
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img id="daniel" src="~/lib/Daniel.jpg" height="85" /></a>
@@ -48,9 +48,9 @@
             </main>
 
 
-            <footer class="border-top footer bg-dark text-muted ">
+            <footer class="border-top footer text-muted ">
                 <div class="container">
-                    <p class="text-white mb-0">&copy; 2020 -Daniel Roy Fanelli, Jr. | A Graduate of <a class="font-light" href="http://www.ucf.edu">University of Central Florida</a> and <a class="font-light" href="http://www.woz-u.com">Woz-U Web Development Bootcamp</a>- <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></p>
+                    <p class="text-white mb-0">&copy; 2020 -Daniel Roy Fanelli, Jr. | Owner of Webceptional Design Co  & A Graduate of <a class="font-light" href="http://www.ucf.edu">University of Central Florida</a> and <a class="font-light" href="http://www.woz-u.com">Woz-U Web Development Bootcamp</a>- <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></p>
                 </div>
             </footer>
         </div>
