--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -3,7 +3,7 @@
 
 }
 
-<div class="container" id="contact">
+<div class="container bg-light" id="contact">
     <div class="col-1-2">
         <h2>Contact Daniel</h2>
         <p id="tel">T:  <a href="tel:19167429702">(916)742-9702</a></p>
