--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="vh-80" id="home1">
+﻿<div class="vh-83" id="home1">
 <div class="col-2-3">
     <h1 class="name text-center text-white">"Having a good functional website will equip your business for the success you have been dreaming of."<a class="text-center btn" href="../views/contact.cshtml">Contact me today!</a></h1>
 
@@ -11,7 +11,7 @@
      </p>
 </div>
 <div class="col-1-3">
-    <form>
+    <form method="post" name="myemailform" action="form-to-email.php">
         <h5>Quick Contact Form:</h5>
         <div><label>Name: </label><input placeholder="type your name here" required /></div>
         <div>
@@ -36,7 +36,7 @@
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
             <label class="form-check-label" for="Evenings">Evenings</label>
         </div>
-
+        <button>Submit</button>
     </form>
 </div>
     </div>
